Fix right margin on mobile

--- a/style.css
+++ b/style.css
@@ -187,8 +187,11 @@ header, main, footer {
   #toolboxCanvases {
     flex-direction: column;
     align-items: center;
-    padding-right: 15px;
+    padding-right: 0px;
     margin-bottom: 30px;
+  }
+  #toolboxCanvases > *:not(:last-child) {
+    margin-right: 0
   }
   #toolboxButtons {
     flex-direction: column;
